# img_finder

./: Dockerfile  celerybeat-schedule  docker-compose.yml  entrypoint.sh  manage.py  pyproject.toml  run_celery.sh
img_app/: __init__.py  admin.py  models.py  serializers.py  tasks.py  urls.py  views.py
img_app/helpers/: api_helper.py  aws_util.py  openai_helper.py
img_app/migrations/: 0001_initial.py  0002_alter_imagemodel_keywords_and_more.py  0003_alter_imagemodel_object_url.py  0004_lookupbucket.py  0005_alter_lookupbucket_unique_together.py
img_finder/: asgi.py  celery.py  settings.py  urls.py  wsgi.py
